crates/parser/tests/snapshots/test__basic_test_cases-5.snap
---
source: crates/parser/tests/test.rs
expression: "HtmlParser::new(\"<div><div></div></div><div><div></div></div>\").parse()"

---
{
  "html": {
    "Element": {
      "name": "fragment",
      "attributes": [],
      "children": [
        {
          "Element": {
            "name": "div",
            "attributes": [],
            "children": [
              {
                "Element": {
                  "name": "div",
                  "attributes": [],
                  "children": []
                }
              }
            ]
          }
        },
        {
          "Element": {
            "name": "div",
            "attributes": [],
            "children": [
              {
                "Element": {
                  "name": "div",
                  "attributes": [],
                  "children": []
                }
              }
            ]
          }
        }
      ]
    }
  },
  "script": [],
  "style": []
}
